# ROS2_Helios2_RGB_KIT

./: .gitignore  README.md
src/lucid_camera_node/: CMakeLists.txt  package.xml
src/lucid_camera_node/resource/: orientation.yml  tritoncalibration.yml
src/lucid_camera_node/resource/UNUSED/: orientation.yml  orientation3.yml  tritoncalibration.yml
src/lucid_camera_node/src/: lucid_node.cpp  test.py
